CSS Fix : - Main menu is now visible in all IE7+, Firefox, Opera, Chrome - table headers are now as high as is necessary - on main page is login button no longer out of login form - on main page is fixed register button appearance (fixed automatic size in IE7)
git-svn-id: https://svn.origo.ethz.ch/eeg-database/trunk@829 1a751040-f3c7-4aaa-98da-1e85aacc1d30

--- a/web/files/style.css
+++ b/web/files/style.css
@@ -14,7 +14,7 @@
     padding: 0;
   }
 
-  .page .header, page .headerNoLogin {
+  .page > .header, page .headerNoLogin {
     padding: 0;
     margin: 0;
     height: 132px;
@@ -87,17 +87,15 @@
    * Main menu
   */
   .mainMenu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: left;
     font-size: 1.5em;
-    position: absolute;
-    bottom: 4px;
-    left: 5px;
+    list-style: none;
+    position: relative;
+    margin-top: 98px;
+    margin-left: 10px;
+    padding: 0;
   }
   .mainMenu li {
-    display: inline;
+    display: block;
     float: left;
     margin: 0;
   }
@@ -183,6 +181,8 @@
   margin: 10px 10px 10px 0;
   text-align: center;
   background: #c2e3e9;
+  float: left;
+  display: block;
 }
 
 .homepageHeading {
